# combinatorial-experiment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: reports.yml  tests.yml
.reports/coverage/report/: d_514e13a67c7a6fcc___init___py.html  d_514e13a67c7a6fcc_combinatorial_experiment_py.html  d_514e13a67c7a6fcc_resume_experiment_py.html  d_514e13a67c7a6fcc_safe_unpickle_py.html  d_514e13a67c7a6fcc_utils_py.html  d_514e13a67c7a6fcc_variables_py.html  index.html  status.json
.reports/tests/: report.html  tests.xml
src/combinatorial_experiment/: __init__.py  combinatorial_experiment.py  compression.py  experiment.py  iterative_experiment.py  resume_experiment.py  safe_unpickle.py  utils.py  variables.py
src/combinatorial_experiment/interfaces/: resume_experiment.py
src/combinatorial_experiment/tracking/: __init__.py  impl.py
test/: test_combinatorial_experiment.py  test_experiment.py  test_utils.py  test_variables.py
test/configs/: base_config.yml  experiment_config.yml  variable_config.yml
tests/: test_utils.py  test_variables.py
tests/configs/: variable_config.yml
