[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=combinatorial-experiment"
testpaths = [
    "tests",
]

#[tool.mypy]
#install_types = true
#mypy_path = "src"
#check_untyped_defs = true
#ignore_missing_imports = true
#no_implicit_optional = true
#show_error_codes = true
#strict_equality = true
#warn_redundant_casts = true
#warn_return_any = true
#warn_unreachable = true
#warn_unused_configs = true
#no_implicit_reexport = true