[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "combinatorial-experiment"
version = "0.2.0"
description = "Lightweight hyperparameter experimentation framework for small ML jobs."
authors = [
    {name = "William Beardall"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "attrs>=22",
    "click>=8.1.8",
    "dill>=0.3",
    "iniconfig>=1",
    "jinja2>=3",
    "markupsafe>=2",
    "multiprocess>=0.70",
    "numpy>=1.19",
    "pandas>=1.3",
    "pluggy>=1.0",
    "pyparsing>=3",
    "python-dateutil>=2.8",
    "pytz>=2022",
    "pyyaml>=6",
    "six>=1.16",
    "tomli>=2",
    "tqdm>=4",
]

[dependency-groups]
dev = [
    "pre-commit>=2.20",
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.9",
    "tox>=3.24"
]

[project.scripts]
resume-experiment = "combinatorial_experiment.interfaces.resume_experiment:resume_experiment"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=combinatorial_experiment"
testpaths = [
    "test",
]
