[metadata]
name = combinatorial-experiment
description = Lightweight hyperparameter experimentation framework for small ML jobs.
author = William Beardall
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    combinatorial_experiment
install_requires =
    attrs>=22
    dill>=0.3
    iniconfig>=1
    jinja2>=3
    markupsafe>=2
    multiprocess>=0.70
    numpy>=1.23
    pandas>=1.3
    pluggy>=1.0
    py>=1.11
    pyparsing>=3
    python-dateutil>=2.8
    pytz>=2022
    pyyaml>=6
    six>=1.16
    tomli>=2
    tqdm>=4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
combinatorial-experiment = py.typed

[flake8]
max-line-length = 160
